[package]
name = "web_crawler_async_await"
version = "0.1.0"
authors = ["Isan Rivkin <isan.rivkin@similarweb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
surf = "1.0.3"
html5ever = "0.25.1"
url = "2.1.0"

